fixed the map sizing, filteroverlapping, bullet point, close btn, card height at small search

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,10 +51,19 @@ body, html {
     left: 300px;
 }
 
+.filter {
+    display: inline;
+    position: absolute;
+    left: 630px;
+}
+
 .filterImg{
     height: 45px;
     image-rendering: crisp-edges;
-    margin-left: 20px
+    margin-left: 20px;
+    filter: grayscale(90%);
+    transition: var(--trans);
+
 }
 
 .filterImg:hover,
@@ -64,6 +73,7 @@ body, html {
     margin-left: 15px;
     margin-right: -5px;
     filter: drop-shadow(2px 2px 0 #7773);
+    filter: grayscale(0%);
 }
 
 #map {
@@ -81,14 +91,16 @@ body, html {
 
 #restaurant-cards {
     width: 45%;
-    height: 100%;
     padding: 10px;
     overflow: auto;
 }
 
+.large-search {
+    height: 100%;
+}
+
 /* map info -- need to change img to ??? when map is created */
 .map-img {
-    /* height: 100%; */
     float: right;
     width: 100%;
 }
@@ -151,25 +163,24 @@ ul.dash > li:before {
 }
 
 .close-button {
+    padding: 6px 18px;
+    font-size: 24px;
     background-color: #fff;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 1px;
+    top: 1px;
     border: none;
-    border-radius: 0 3px 0 0;
-    outline:0;
+    border-radius: .3rem;
 }
 
-.mapboxgl-popup-close-button:hover,
 .close-button:hover {
-    text-shadow: 2px 2px 2px #aaa;
-    margin-top: -5px;
+    background-color: #0000000d;
+    border: 2px inset #0000001f;
 }
 
 .mapboxgl-popup-close-button:hover,
 .close-button:active {
-    text-shadow: none;
-    margin-top: 0;
+    border: 2px inset #0000001f;
 }
 
 .mini-card:hover {
@@ -229,6 +240,7 @@ ul.dash > li:before {
 .link a {
     color: #577897;
     font-weight: bold;
+    transition: var(--trans);
 }
 
 .name:hover,
@@ -310,8 +322,28 @@ ul.dash > li:before {
     z-index: -1;
 }
 
+@media (max-width: 1200px) { 
+    .col-
 
-@media (max-width: 990px) {
+}
+
+@media (max-width: 1200px) { 
+    .form-inline {
+        position: static !important;
+    }
+
+    .filter {
+        display: block;
+        position: static !important;
+        padding: 10px 0;
+        border-bottom: 1px solid #ccc;
+    }
+
+}
+
+
+
+@media (max-width: 992px) {
     #restaurant-cards,
     .map {
         width: 100%;
@@ -322,10 +354,6 @@ ul.dash > li:before {
         display: none;
     }
 
-    .nav-item .form-inline {
-        position: inherit;
-    }
-
     #bread {
         width: 300px;
         top: 600px;
@@ -334,7 +362,7 @@ ul.dash > li:before {
 
 }
 
-@media (max-width: 720px) {
+@media (max-width: 768px) {
     .map {
         height: 40%;
     }
@@ -373,4 +401,13 @@ ul.dash > li:before {
     #bread {
         display: none;
     }
+}
+
+@media (max-width: 576px) {
+    #nav-input {
+        width: 70%;
+        min-width: 215px;
+        margin: 4px;
+    }
+
 }
